# debian_bridge

./: .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yaml
cli/: Cargo.toml  build.rs
cli/src/: main.rs
config/: cli.yaml
core/src/: lib.rs
core/src/app/: mod.rs
core/src/sys/: driver.rs  mod.rs
debian_bridge/: Cargo.toml
debian_bridge/src/: lib.rs
debian_bridge_cli/: Cargo.toml
debian_bridge_cli/config/: cli.yaml
debian_bridge_cli/src/: lib.rs  matcher.rs  starter.rs
debian_bridge_core/: Cargo.toml  build.rs
debian_bridge_core/src/app/: config.rs  deb.rs  docker.rs  error.rs  mod.rs  util.rs
debian_bridge_core/src/sys/: error.rs  mod.rs
src/: app.rs  lib.rs  main.rs
src/app/: config.rs  deb.rs  docker.rs  error.rs  mod.rs  program.rs  util.rs
src/sys/: driver.rs  error.rs  mod.rs
