[package]
name = "debian_bridge"
description = "Bridge to run .deb packages on your distribution using docker"
version = "0.1.0"
authors = ["victor <fedorenko22116@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shiplift = "0.5"
clap = { version = "2.33.0", features = ["yaml"] }
pretty_env_logger = "0.3.0"
log = "0.4"
tokio = "0.1.22"
xdg = "^2.1"
colorful = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dockerfile = "0.2.1"
pipers = "1.0.1"
regex = "1.2.1"
