[package]
name = "debian_bridge"
version = "0.1.0"
authors = ["victor <fedorenko22116@gmail.com>"]
edition = "2018"
default-run = "cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debian_bridge_cli = { path = "../debian_bridge_cli" }