[package]
name = "debian_bridge"
description = "Bridge to run .deb packages on your distribution using docker"
version = "1.0.0"
authors = ["victor <fedorenko22116@gmail.com>"]
edition = "2018"
license = "MIT"
default-run = "debian_bridge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debian_bridge_cli = { path = "../debian_bridge_cli" }