[package]
name = "debian_bridge_cli"
description = "Bridge to run .deb packages on your distribution using docker"
version = "0.2.2"
authors = ["victor <fedorenko22116@gmail.com>"]
edition = "2018"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debian_bridge_core = { path = "../debian_bridge_core" }
clap = { version = "2.33.0", features = ["yaml"] }
pretty_env_logger = "0.3.0"
log = "0.4"
xdg = "^2.1"
dirs = "2.0.2"

[dev-dependencies]
mocktopus = "0.7.0"

[build-dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
xdg = "^2.1"
dirs = "2.0.2"
