[package]
name = "debian_bridge_core"
description = "debian_bridge core libraries"
version = "0.2.2"
authors = ["victor <fedorenko22116@gmail.com>"]
edition = "2018"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shiplift = "0.5"
pretty_env_logger = "0.3.0"
log = "0.4"
tokio = "0.1.22"
xdg = "^2.1"
colorful = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dockerfile = "0.2.1"
pipers = "1.0.1"
regex = "1.2.1"
freedesktop-desktop-entry = "0.1.1"
dirs = "2.0.2"

[dev-dependencies]
mocktopus = "0.7.0"

[build-dependencies]
xdg = "^2.1"
dirs = "2.0.2"
